# sf-config

./: .gitignore  .gitreview  .zuul.yaml  LICENSE  README.md  README.rst  groups  project.config  setup.cfg  sf-config.spec
ansible/: ansible.cfg  setup.yaml
config-repo/: zuul.yaml
defaults/: arch.yaml  known_gerrits.yaml  project.config  sfconfig.yaml
doc/: conf.py
refarch/: 2nodes-elk.yaml  3nodes.yaml  allinone.yaml  distributed.yaml  dual-zuul.yaml  minimal.yaml  multi-jenkins.yaml  softwarefactory-project.io.yaml  tenant-minimal.yaml  tenant.yaml  zuul-minimal.yaml  zuul3.yaml
refarch-golden-tests/: config_initialize.yml  config_update.yml  etc-hosts  get_logs.yml  hosts  nodepool_restart.yml  sf_backup.yml  sf_erase.yml  tenant_update.yml  zuul_restart.yml  zuul_start.yml  zuul_stop.yml
scripts/: build-image.sh  clean-nodepool-tenant.py  config-update.sh  create_project_resources.py  delete-gerrit-user.sh  generate_sp_metadata.sh  gerrit-set-ci-user.sh  gerrit-set-default-acl.sh  gerrit_repl_alias_helper.py  hieraedit.py  install_rhel_epel_depends.sh  jenkins-decrypt.py  jenkins-secrets-edit.py  migrate_sqlite_to_mariadb.py  monitor-traceback.py  propose_replication_config.sh  reprovision_users.py  sf-config-update.sh  sf-nodepool-conf-merger.py  sf-nodepoolV3-conf-merger.py  sf-update-uid-gid.py  sf-zuul-tenants-load.py  sfconfig.py  sfusers_to_keycloak.sh  smart-restart.py  submit_and_wait.py  upgrade-config-repo.sh  yaml-merger.py  zk-cleanup-queue.py  zuul-changes.py  zuul-conf-merger.py  zuul-encrypt-secret.py  zuul3-conf-merger.py  (+1 more)
(+1347 files in other folders)
