[metadata]
name = sfconfig
summary = Software Factory deployment configuration
description-file = README.rst
requires-python = >=2.7
author = Software Factory
author-email = softwarefactory-dev@redhat.com
home-page = https://www.softwarefactory-project.io/
classifier =
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

keywords = ci, ansible

[files]
packages = sfconfig

[global]
setup-hooks = pbr.hooks.setup_hook

[build_sphinx]
build-dir = build/doc/
source-dir = doc/
all_files = 1

[upload_sphinx]
upload-dir = build/doc/html

[wheel]
universal = 1

[entry_points]
console_scripts = sfconfig = sfconfig.cmd:main
